--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
+/* body{
+  background-color: #282c34;
+  color: tomato;
+} */
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
@@ -35,4 +35,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
