--- a/src/component/homePage/HomePage.css
+++ b/src/component/homePage/HomePage.css
@@ -145,6 +145,6 @@
     }
     .home-container{
         height: fit-content;
-        padding: 0px 0px 30px;
+        padding: 0px 0px 8rem;
     }
 }
