--- a/src/component/homePage/HomePage.css
+++ b/src/component/homePage/HomePage.css
@@ -75,13 +75,16 @@
     transition: 6000ms ease-out;
     
 }
-
+.span-div{
+    display: none;
+}
 .slide2{
     background-color: transparent;
     color: tomato;
     border: 1px solid tomato;
     /* margin-top: 5%; */
-    box-shadow: rgba(0,0,0,0.24) 0px 3px 8px;animation: myAnim 4s ease 1s 1 normal both;
+    box-shadow: rgba(0,0,0,0.24) 0px 3px 8px;
+    animation: myAnim 4s ease 1s 1 normal both;
     border-radius: 10px 10px 0 0;
     padding: 20px;
     transform: translateY(70px)
@@ -147,4 +150,22 @@
         height: fit-content;
         padding: 0px 0px 8rem;
     }
+    .section{
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .slide2{
+       display:none;
+    }
+    .spanss{
+        animation: myAnima 5s cubic-bezier(0.11, 0, 0.5, 0) 1s 1 normal both;
+         /* transform: translateY(70px); */
+    }
+    .span-div{
+        display:flex;
+        flex-direction: row;
+        gap: 5px;
+    }
+
 }
