--- a/src/component/project/Project.css
+++ b/src/component/project/Project.css
@@ -3,6 +3,7 @@
     background-color: #282c34;
     color: tomato;
     height: fit-content;
+    padding: 3rem 0px 4rem;
 }
 .pro-contain{
     width: 80%;
