--- a/src/component/homePage/HomePage.css
+++ b/src/component/homePage/HomePage.css
@@ -1,6 +1,14 @@
 .home-container{
     width: 100%;
     background-color: #282c34;
+    background-image: url(C:\Users\BISOLA\Desktop\ham\react-folders\ajibade-port\public\g14.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: multiply;
+    position: relative;
+    overflow: hidden;
+    opacity: 0.9;
     color: tomato;
     height: 100vh;
 }
@@ -149,6 +157,8 @@
     .home-container{
         height: fit-content;
         padding: 0px 0px 9.5rem;
+        background: #282c34;
+        opacity:1;
     }
     .section{
         justify-content: center;
